--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Build-Depends: cmake,
                mauikit-dev,
                qtbase5-dev (>= 5.5.0~),
                qtdeclarative5-dev,
+               qtmultimedia5-dev,
                qtquickcontrols2-5-dev
 Standards-Version: 4.2.1
 Homepage: https://invent.kde.org/maui/booth/
