--- a/.github/workflows/build-deb-amd64.yml
+++ b/.github/workflows/build-deb-amd64.yml
@@ -52,7 +52,7 @@ jobs:
         run: ./scripts/build-deb.sh
         env:
           PACKAGE_VERSION: ${{ inputs.packageVersion }}
-          BONSAI_BRANCH: ${{ inputs.boothBranch }}
+          BOOTH_BRANCH: ${{ inputs.boothBranch }}
 
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v3
